[package]
name = "limage"
version = "0.5.0"
edition = "2021"
authors = ["Phillip Groves <phillip.t.groves@gmail.com>"]
description = "A Cargo utility for running/testing Rust-based kernels using the Limine bootloader"
license = "MIT"
repository = "https://github.com/phillipg14/limage"

[dependencies]
anyhow = "1.0.28"
cargo_metadata = "0.9.1"
locate-cargo-manifest = "0.2.0"
thiserror = "1.0.16"
toml = "0.5.6"
wait-timeout = "0.2.0"