[package]
name = "limage"
version = "0.5.1"
edition = "2021"
authors = ["Phillip Groves <phillip.t.groves@gmail.com>"]
description = "A Cargo utility for running/testing Rust-based kernels using the Limine bootloader"
license = "MIT"
repository = "https://github.com/phillipg14/limage"

[dependencies]
anyhow = "1.0.28"
cargo_metadata = "0.9.1"
clap = { version = "4.5.28", features = ["derive"] }
locate-cargo-manifest = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "1.0.16"
toml = "0.5.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wait-timeout = "0.2.0"
