[package]
name = "gk"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.3.1"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
font8x8 = { version = "0.3.1", default-features = false }
linked_list_allocator = "0.9.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.limage]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
image-path = "target/grovean/grovean-x86_64.iso"